fix: duplicate cursors and z-index

--- a/assets/scss/_cursors.scss
+++ b/assets/scss/_cursors.scss
@@ -3,7 +3,7 @@
 .multi-cursor {
   position: absolute;
   pointer-events: none;
-  z-index: 9999;
+  z-index: 15;
   width: 50px;
   height: 50px;
   top: 0;
